# aoc2024

./: .gitignore  Cargo.toml  README.md
examples/: day02.rs  day03.rs  day04.rs  day1.rs  day2.rs
src/: lib.rs
