[package]
name = "aoc2024"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "day01"
path = "bin/day01.rs"

[[bin]]
name = "day02"
path = "bin/day02.rs"

[[bin]]
name = "day03"
path = "bin/day03.rs"

[[bin]]
name = "day04"
path = "bin/day04.rs"

[[bin]]
name = "day05"
path = "bin/day05.rs"

[[bin]]
name = "day06"
path = "bin/day06.rs"

[[bin]]
name = "day07"
path = "bin/day07.rs"

[[bin]]
name = "day08"
path = "bin/day08.rs"

[[bin]]
name = "day09"
path = "bin/day09.rs"

[[bin]]
name = "day10"
path = "bin/day10.rs"

[[bin]]
name = "day11"
path = "bin/day11.rs"

[[bin]]
name = "day12"
path = "bin/day12.rs"

[[bin]]
name = "day13"
path = "bin/day13.rs"

[[bin]]
name = "day14"
path = "bin/day14.rs"
